--- a/style.css
+++ b/style.css
@@ -63,3 +63,42 @@ footer{
     font-size: xxx-large;
     padding-top: 25px;
 }
+
+.sub-form {
+    background-color: rgb(204,204,204);
+    /* height: 350px; */
+    width: 35%;
+    margin: auto;
+    padding: 17px;
+    border-radius: 4px;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.6);
+    border: 3px solid white;
+    margin-bottom: 10px;
+}
+
+#user-cmt-err, #content-submit-err, #user-email-err {
+    color: red;
+}
+
+
+input[type=text], input[type=password], input[type=email], input[type=date], textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+input[type=submit], input[type=reset] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
